# srrg2_executor

./: readme.md
configs/: dl.conf  mc.conf
results/tum/: ate.txt
srrg2_executor/: CMakeLists.txt  package.xml  readme.md
srrg2_executor/src/apps/: auto_dl_finder.cpp  srrg2_dynamic_shell.cpp  srrg2_shell.cpp
